--- a/.github/workflows/run-c-tests.yml
+++ b/.github/workflows/run-c-tests.yml
@@ -1,6 +1,9 @@
 on:
   workflow_call:
     inputs:
+      jdk-version:
+        required: true
+        type: string
       runtime-ref:
         required: false
         type: string
@@ -13,6 +16,13 @@ jobs:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
+      - name: Install JDK ${{ inputs.runtime-ref }}
+      - uses: actions/setup-java@v1.4.3
+        with:
+        # The Java version to make available on the path.
+        # Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x). 
+        # Early access versions can be specified in the form of e.g. 14-ea, 14.0.0-ea, or 14.0.0-ea.28
+        java-version: ${{ inputs.jdk-version }}
       - uses: actions/checkout@v2
         with:
           submodules: true
@@ -24,7 +34,6 @@ jobs:
           git checkout ${{ inputs.runtime-ref }}
           popd
         if: ${{ inputs.runtime-ref }}
-      - uses: ./.github/actions/install-jdk
       - name: Install dependencies Ubuntu
         run: sudo apt-get install libprotobuf-c-dev protobuf-c-compiler protobuf-compiler libprotobuf-dev
         if: runner.os == 'Linux'
