--- a/.github/workflows/run-c-tests.yml
+++ b/.github/workflows/run-c-tests.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Install JDK ${{ inputs.runtime-ref }}
-      - uses: actions/setup-java@v1.4.3
+        uses: actions/setup-java@v1.4.3
         with:
         # The Java version to make available on the path.
         # Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x). 
