--- a/.github/actions/install-rti/action.yml
+++ b/.github/actions/install-rti/action.yml
@@ -4,10 +4,15 @@ description: Install the RTI
 runs:
   using: 'composite'
   steps:
-    - run: |
-      cd org.lflang/src/lib/c/reactor-c/core/federated/RTI
-      mkdir build
-      cd build
-      cmake ../
-      make
-      sudo make install
+    - run: cd org.lflang/src/lib/c/reactor-c/core/federated/RTI
+      shell: bash
+    - run: mkdir build
+      shell: bash
+    - run: cd build
+      shell: bash
+    - run: cmake ../
+      shell: bash
+    - run: make
+      shell: bash
+    - run: sudo make install
+      shell: bash
