--- a/.github/actions/install-rti/action.yml
+++ b/.github/actions/install-rti/action.yml
@@ -3,16 +3,6 @@ author: Marten Lohstroh
 description: Install the RTI
 runs:
   using: 'composite'
-  steps:
-    - run: cd org.lflang/src/lib/c/reactor-c/core/federated/RTI
-      shell: bash
-    - run: mkdir build
-      shell: bash
-    - run: cd build
-      shell: bash
-    - run: cmake ../
-      shell: bash
-    - run: make
-      shell: bash
-    - run: sudo make install
+  steps: 
+    - run: ${{ github.action_path }}/install.sh
       shell: bash
