--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,16 +76,27 @@ jobs:
           ./gradlew buildLfc
           bin/lfc.ps1 --help
         if: ${{ runner.os == 'Windows' }}
-
+  
+  # Run the C tests.
   c-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/run-c-tests.yml@modular-ci
+    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@modular-ci
     with:
       runtime-ref:
 
+  # Run the CCpp tests.
   ccpp-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/run-c-tests.yml@modular-ci
+    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@modular-ci
     with:
-      use-cpp: true
+      target: 'CCpp'
+  
+  python-tests:
+    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@modular-ci
+    with:
+      target: 'Python'
+
+  # Run the TypeScript tests.
+  ts-tests:
+    uses: lf-lang/lingua-franca/.github/workflows/ts-tests.yml@modular-ci
 
   cpp-tests:
     strategy:
@@ -106,88 +117,7 @@ jobs:
       - name: Run C++ tests;
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.CppTest.*
-        
-  ts-tests:
-    strategy:
-      matrix:
-        platform: [ubuntu-latest, macos-latest]
-    runs-on: ${{ matrix.platform }}
-    steps:
-      - name: Setup Java JDK
-        uses: actions/setup-java@v1.4.3
-        with:
-          # The Java version to make available on the path. Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x). Early access versions can be specified in the form of e.g. 14-ea, 14.0.0-ea, or 14.0.0-ea.28
-          java-version: 11
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2.1.2
-      - name: Cache .pnpm-store
-        uses: actions/cache@v1
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-      - name: Install pnpm
-        run: sudo npm i -g pnpm
-      - name: Install Dependencies Ubuntu
-        run: sudo apt-get install libprotobuf-dev protobuf-compiler
-        if: runner.os == 'Linux'
-      - name: Install Dependencies OS X
-        run: |
-          brew install protobuf
-          brew install coreutils
-        if: runner.os == 'macOS'
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-        with:
-            submodules: true
-      # - name: Checkout submodules
-      #   uses: textbook/git-checkout-submodule-action@master # FIXME: will likely not work on windows. Workaround: https://github.com/textbook/git-checkout-submodule-action/issues/7
-      #- name: Checkout submodules
-      #  uses: srt32/git-actions@v0.0.3
-      #  with:
-      #    args: git submodule update --init --recursive
-      - name: Run TS tests;
-        run: |
-          ./gradlew test --tests org.lflang.tests.runtime.TypeScriptTest.*
-        
-  python-tests:
-    strategy:
-      matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
-    steps:
-      - name: Setup Java JDK
-        uses: actions/setup-java@v1.4.3
-        with:
-          # The Java version to make available on the path. Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x). Early access versions can be specified in the form of e.g. 14-ea, 14.0.0-ea, or 14.0.0-ea.28
-          java-version: 14
-      - name: Setup Python
-        uses: actions/setup-python@v2
-      - name: Install Dependencies Ubuntu
-        run: sudo apt-get install libprotobuf-dev protobuf-compiler
-        if: runner.os == 'Linux'
-      - name: Install Dependencies OS X
-        run: |
-          brew install protobuf
-          brew install coreutils
-        if: runner.os == 'macOS'
-      - name: Install Dependencies Windows
-        uses: lukka/run-vcpkg@v4
-        with:
-          vcpkgArguments: protobuf
-          vcpkgGitCommitId: 6185aa76504a5025f36754324abf307cc776f3da
-          vcpkgDirectory: ${{ github.workspace }}/vcpkg/
-          vcpkgTriplet: x64-windows-static
-        if: runner.os == 'Windows'
-      - name: Install Google API Python Client
-        run: pip3 install --upgrade google-api-python-client
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-        with:
-          submodules: true
-      - name: Run Python tests;
-        run: |
-          ./gradlew test --tests org.lflang.tests.runtime.PythonTest.*
-
+                
   rust-tests:
     strategy:
       matrix:
