--- a/.github/workflows/c-tests.yml
+++ b/.github/workflows/c-tests.yml
@@ -6,12 +6,11 @@ on:
       runtime-ref:
         required: false
         type: string
-      use-cpp:
+      target:
         required: false
-        type: boolean
+        default: 'C'
 jobs:
   run-tests:
-    name: Run C tests
     strategy:
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
@@ -44,14 +43,32 @@ jobs:
           brew install protobuf-c
           brew install coreutils
         if: runner.os == 'macOS'
+      - name: Install Dependencies Windows
+        uses: lukka/run-vcpkg@v4
+        with:
+          vcpkgArguments: protobuf
+          vcpkgGitCommitId: 6185aa76504a5025f36754324abf307cc776f3da
+          vcpkgDirectory: ${{ github.workspace }}/vcpkg/
+          vcpkgTriplet: x64-windows-static
+        if: runner.os == 'Windows'
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        if: ${{ inputs.target == 'Python'}}
+      - name: Install Google API Python Client
+        run: pip3 install --upgrade google-api-python-client
+        if: ${{ inputs.target == 'Python'}}
       - name: Install RTI
         uses: ./.github/actions/install-rti
         if: ${{ runner.os == 'macOS' || runner.os == 'Linux' }}
-      - name: Perform C tests
+      - name: Perform tests for C target
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.CTest.*
-        if: ${{ !inputs.use-cpp }}
-      - name: Perform CCpp tests
+        if: ${{ inputs.target == 'C'}}
+      - name: Perform tests for CCpp target
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.CCppTest.*
-        if: ${{ inputs.use-cpp }}
+        if: ${{ inputs.target == 'CCpp' }}
+      - name: Perform tests for Python target
+        run: |
+          ./gradlew test --tests org.lflang.tests.runtime.PythonTest.*
+        if: ${{ inputs.target == 'Python'}}
