--- a/.github/workflows/c-tests.yml
+++ b/.github/workflows/c-tests.yml
@@ -11,7 +11,7 @@ on:
         type: string
         default: 'C'
 jobs:
-  run-tests:
+  run:
     strategy:
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
