--- a/.github/workflows/cpp-tests.yml
+++ b/.github/workflows/cpp-tests.yml
@@ -6,8 +6,8 @@ on:
       runtime-ref:
         required: false
         type: string
-jobs:  
-  run-tests:
+jobs:
+  run:
     strategy:
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
