Attempt to use action for checking out a particular ref

--- a/.github/workflows/c-tests.yml
+++ b/.github/workflows/c-tests.yml
@@ -28,13 +28,10 @@ jobs:
         with:
           submodules: true
           fetch-depth: 0 # NOTE: if this parameter is not used, fetching an alternative runtime fails.
-      - name: Use alternative runtime version
-        run: |
-          pushd org.lflang/src/lib/c/reactor-c
-          git fetch --all
-          git checkout ${{ inputs.runtime-ref }}
-          popd
-        if: ${{ inputs.runtime-ref }}
+      - uses: ./.github/actions/checkout-ref
+        with:
+          path: 'org.lflang/src/lib/c/reactor-c'
+          ref: ${{ inputs.runtime-ref }}
       - name: Install dependencies Ubuntu
         run: sudo apt-get install libprotobuf-c-dev protobuf-c-compiler protobuf-compiler libprotobuf-dev
         if: runner.os == 'Linux'
