--- a/.github/actions/checkout-ref/action.yml
+++ b/.github/actions/checkout-ref/action.yml
@@ -2,16 +2,16 @@ name: Checkout a particular ref
 description: Change to repo directory and check out ref
 inputs:
   path:
-    description: "Path to the repository or submodule"
+    description: Path to the repository or submodule
     required: true
     type: string
   ref:
-    description: "The ref to check out"
+    description: The ref to check out
     required: true
     type: string
 
 runs:
-  using: "composite"
+  using: composite
   steps: 
     - run: .github/actions/checkout-ref/checkout.sh ${{ inputs.path }} ${{ inputs.ref }}
       shell: bash
