--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,17 +1,15 @@
-name: Unit Tests
+name: Run unit tests (and compute code coverage)
 
 on:
   workflow_call:
 
 jobs:
-  # Run unit tests (and compute code coverage).
   run:
     strategy:
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      # Setup Build dependencies.
       - name: Setup Java JDK
         uses: actions/setup-java@v1.4.3
         with:
