Set default value

--- a/.github/workflows/c-based-tests.yml
+++ b/.github/workflows/c-based-tests.yml
@@ -6,6 +6,7 @@ on:
       compiler-ref:
         required: false
         type: string
+        default: ''
       runtime-ref:
         required: false
         type: string
