--- a/.github/workflows/c-tests.yml
+++ b/.github/workflows/c-tests.yml
@@ -28,10 +28,12 @@ jobs:
           # Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x). 
           # Early access versions can be specified in the form of e.g. 14-ea, 14.0.0-ea, or 14.0.0-ea.28
           java-version: 11
-      - uses: actions/checkout@v2
+      - name: Checkout lingua-franca repo
+        uses: actions/checkout@v2
         with:
           ref: ${{ inputs.compiler-ref }}
-      - uses: actions/checkout@v2
+      - name: Checkout reactor-c submodule
+        uses: actions/checkout@v2
         with:
           repository: lf-lang/reactor-c
           path: org.lflang/src/lib/c/reactor-c
