--- a/.github/workflows/ts-tests.yml
+++ b/.github/workflows/ts-tests.yml
@@ -34,15 +34,13 @@ jobs:
           brew install protobuf
           brew install coreutils
         if: runner.os == 'macOS'
-      - uses: actions/checkout@v2
+      - name: Check out lingua-franca repository
+        uses: actions/checkout@v2
+      - name: Check out reactor-ts submodule
+        uses: actions/checkout@v2
         with:
-          submodules: true
-      - name: Use alternative runtime version
-        uses: ./.github/actions/checkout-ref
-        with:
-          path: 'org.lflang/src/lib/ts/reactor-ts'
+          path: org.lflang/src/lib/ts/reactor-ts
           ref: ${{ inputs.runtime-ref }}
-        if: ${{ inputs.runtime-ref }}
       - name: Perform TypeScript tests;
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.TypeScriptTest.*
