--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,8 @@ jobs:
   # Run the Python integration tests.
   py-tests:
     uses: lf-lang/lingua-franca/.github/workflows/py-tests.yml@modular-ci
+    with:
+      reactor-c-py-ref: master
 
   # Run the Rust integration tests.
   rs-tests:
