--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
   py-tests:
     uses: lf-lang/lingua-franca/.github/workflows/py-tests.yml@modular-ci
     with:
-      reactor-c-py-ref: master
+      reactor-c-py-ref: main
 
   # Run the Rust integration tests.
   rs-tests:
