--- a/.github/workflows/ts-tests.yml
+++ b/.github/workflows/ts-tests.yml
@@ -37,13 +37,16 @@ jobs:
       - name: Check out lingua-franca repository
         uses: actions/checkout@v2
         with:
+          repository: lf-lang/lingua-franca
+          submodules: true
           ref: ${{ inputs.compiler-ref }}
-      - name: Check out reactor-ts submodule
+      - name: Check out specific ref of reactor-c
         uses: actions/checkout@v2
         with:
-          repository: lf-lang/reactor-ts
-          path: org.lflang/src/lib/ts/reactor-ts
+          repository: lf-lang/reactor-c
+          path: org.lflang/src/lib/c/reactor-c
           ref: ${{ inputs.runtime-ref }}
+        if: ${{ inputs.runtime-ref }}
       - name: Perform TypeScript tests
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.TypeScriptTest.*
